# micrograd

./: .pre-commit-config.yaml  README.md  Untitled.ipynb  micrograd_from_scratch.ipynb  pyproject.toml
